<resources>
    <string name="app_name">Capstone Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture_image">Ambil Foto</string>
    <string name="settings">Pengaturan</string>
    <string name="camera">Kamera</string>
    <string name="change_camera">Ubah Kamera</string>
    <string name="change_password">Ubah Password</string>
    <string name="error_change_password">Password minimal 8 karakter</string>
    <string name="error_retyped_password">Password tidak sesuai dengan password baru</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="contact_number">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="retype_new_password">Ulangi Password Baru</string>
    <string name="about_us">Tentang Kami</string>
    <string name="logout">Logout</string>
    <string name="my_account">Akun Saya</string>
    <string name="camera_x">CameraX</string>
    <string name="save">Simpan</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="error_full_name">Nama lengkap tidak boleh kosong</string>
    <string name="error_email">Format email belum sesuai</string>
    <string name="error_contact_number">Nomor tidak boleh kosong</string>
    <string name="description_about_us">The application is quite simple. Users can either capture or upload an image of food ingredients, then the application will give you some recipes and nutrition information like vitamins, calories, sugar, etc based on prediction of the image. The application was given the trained model from machine learning so it can predict the ingredients. It will also give you warning if the food ingredients are quite dangerous or unhealthy for some children at their ages. From the idea, we hope that parents are more careful about giving their children food, snacks, or the kind of thing which can make their children stunt.</string>
    <string name="system">System</string>
    <string name="failed_to_take_picture">Gagal mengambil foto</string>
    <string name="failed_to_start_camera">Gagal memulai camera</string>
    <string name="search_result">Hasil Pencarian</string>
    <string name="masuk">Masuk</string>
    <string name="nikmati_fitur_lengkap_dengan_masuk">Nikmati fitur lengkap dengan masuk!</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="atau_masuk_dengan_google">atau Masuk dengan Google</string>
    <string name="google">Google</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="registrasi">Registrasi</string>
    <string name="daftar_dan_mulai_eksplorasimu">Daftar dan mulai eksplorasimu!</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="johny_depp">Johny Depp</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_6581111111111">6581111111111</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="recipe">Resep</string>
    <string name="nutrition">Gizi</string>
    <string name="back">Kembali</string>
    <string name="recommended_dietary_allowance">AKG</string>
    <string name="percentage">Persen</string>
    <string name="percentage_placeholder">%1$s %2$s</string>
    <string name="no_data">no data</string>
    <string name="amount_per_serving_calories">Jumlah kalori per sajian</string>
    <string name="total_weight">Berat total</string>
    <string name="error_loading_data">Error Loading Data</string>
    <string name="title_menu_1">Get to Know Your Food with a Single Capture</string>
    <string name="desc_menu_1">Lorem ipsum dolor sit amesadatat, asdconsectetur adipiscing elit.</string>
    <string name="get_started">Get Started</string>
    <string name="title_menu_2">Give Best Nutrients to Your Kids</string>
    <string name="desc_menu_2">Lorem ipsum dolor sit amesadatat, asdconsectetur adipiscing elit.</string>
    <string name="title_menu_3">Let\'s Have a Healthier Life With Us</string>
    <string name="desc_menu_3">Lorem ipsum dolor sit amesadatat, asdconsectetur adipiscing elit.</string>
    <string name="amount">Jumlah</string>
    <string name="more_detail">Detail selengkapnya</string>
    <string name="ingredients">Bahan</string>
    <string name="open_camera">Buka Kamera</string>
    <string name="capture_successfull">Capture berhasil</string>
    <string name="error_old_password">Password harus diisi!</string>
    <string name="error_new_password">Password minimal 8 karakter</string>
    <string name="change_password_successfull">Password berhasil diubah</string>
    <string name="retake_picture">Ambil ulang</string>
    <string name="uploading">Sedang upload…</string>
    <string name="preview">Preview</string>
    <string name="food_servings">Jumlah porsi : %1$s</string>
    <string name="please_relogin">Harap login ulang</string>
    <string name="email_is_required">Email harus diisi</string>
    <string name="login_successfull">Login berhasil</string>
    <string name="permission_denied">Permission tidak diberikan</string>
</resources>