<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.detail.NutritionFragment">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/total_weight"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_weight_tv"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/recommended_dietary_allowance"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/amount"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/percentage"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>
</androidx.core.widget.NestedScrollView>