<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:paddingHorizontal="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/masuk"
                android:textSize="24sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/nikmati_fitur_lengkap_dengan_masuk"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:background="@drawable/background"
                android:inputType="textEmailAddress"
                android:hint="@string/xxxxx123_email_com" />

            <TextView
                android:id="@+id/password_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:background="@drawable/background"
                android:inputType="textPassword"
                android:hint="@string/password_hint" />

            <Button
                android:id="@+id/log_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:text="@string/masuk"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:background="@drawable/background" />

            <TextView
                android:id="@+id/log_option_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/atau_masuk_dengan_google"
                android:textSize="14sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/log_in_google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:text="@string/google"
                android:textColor="#A3A2A1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:backgroundTint="#F8F7FA" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:layout_marginEnd="5sp"
                    android:text="@string/belum_punya_akun"/>

                <TextView
                    android:id="@+id/register_now_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"
                    android:textColor="@color/dark_orange"
                    android:text="@string/daftar_sekarang"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>