<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    android:paddingHorizontal="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/registrasi"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/daftar_dan_mulai_eksplorasimu"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/name_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/nama_lengkap"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:helperTextTextColor="@color/dark_orange"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="15dp"
                    android:background="@drawable/background"
                    android:inputType="textEmailAddress"
                    android:hint="@string/johny_depp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/email_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:helperTextTextColor="@color/dark_orange"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="15dp"
                    android:background="@drawable/background"
                    android:inputType="textEmailAddress"
                    android:hint="@string/example_email_com" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintEnabled="false"
                app:helperTextTextColor="@color/dark_orange"
                app:endIconMode="password_toggle" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="15dp"
                    android:background="@drawable/background"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:text="@string/daftar"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:background="@drawable/background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_et" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:layout_marginEnd="5sp"
                    android:text="@string/sudah_punya_akun"/>

                <TextView
                    android:id="@+id/login_now_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"
                    android:textColor="@color/dark_orange"
                    android:text="@string/masuk_sekarang"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/register_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>