<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.profile.AboutUsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/CustomWhiteActionBar"
        app:title="@string/about_us" />

    <ScrollView
        android:id="@+id/layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/desc_about_us_tv"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/description_about_us"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>