<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.profile.ChangePasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/CustomAppBarTitleTextAppearance"
        android:theme="@style/CustomWhiteActionBar"
        app:title="@string/change_password">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <Button
                android:id="@+id/save_password_btn"
                style="@style/CustomOrangeOutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/save" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        app:indicatorColor="@color/dark_orange"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <ScrollView
        android:id="@+id/layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/old_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeErrorColor="?attr/colorPrimary"
                app:errorTextColor="?attr/colorPrimary"
                app:hintTextAppearance="@style/CustomLabelEditText"
                app:passwordToggleEnabled="true">

                <com.c22ps322.mealsnap.views.component.CustomEditText
                    android:id="@+id/old_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/old_password"
                    android:imeActionLabel="@string/old_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeErrorColor="?attr/colorPrimary"
                app:errorTextColor="?attr/colorPrimary"
                app:hintTextAppearance="@style/CustomLabelEditText"
                app:passwordToggleEnabled="true">

                <com.c22ps322.mealsnap.views.component.CustomEditText
                    android:id="@+id/new_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/new_password"
                    android:imeActionLabel="@string/new_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/retype_new_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeErrorColor="?attr/colorPrimary"
                app:errorTextColor="?attr/colorPrimary"
                app:hintTextAppearance="@style/CustomLabelEditText"
                app:passwordToggleEnabled="true">

                <com.c22ps322.mealsnap.views.component.CustomEditText
                    android:id="@+id/retype_new_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/retype_new_password"
                    android:imeActionLabel="@string/retype_new_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>